--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -8,7 +8,6 @@
         "check_all": "Verifica tutto",
         "clear": "Pulisci",
         "close": "Chiudi",
-        "cluster": "Cluster",
         "clusters": "Cluster",
         "confirmation": "Conferma",
         "delete": "Elimina",
@@ -20,7 +19,6 @@
         "groups": "Gruppi",
         "loading": "Caricamento...",
         "none": "Nessuno",
-        "ok": "Ok",
         "read": "Leggi",
         "save": "Salva",
         "select_device": "Selezione dispositivo",
@@ -33,74 +31,14 @@
     "devicePage": {
         "about": "Info",
         "bind": "Associa",
-        "clusters": "Clusters",
         "dev_console": "Console developer",
-        "exposes": "Exposes",
-        "reporting": "Reporting",
         "settings": "Impostazioni",
         "settings_specific": "Impostazioni specifiche",
         "state": "Stato",
-        "scene": "Scene",
         "unknown_device": "Dispositivo sconosciuto"
     },
     "exposes": {
-        "action": "Azione",
-        "auto_off": "Spegnimento automatico",
-        "away_mode": "Modalità fuori casa",
-        "away_preset_days": "Giorni prestabiliti modalità fuori casa",
-        "away_preset_temperature": "Preset temperatura modalità fuori casa",
-        "backlight_mode": "Modalità retroilluminazione",
-        "battery": "Batteria",
-        "battery_low": "Batteria bassa",
-        "boost_time": "Tempo di boost",
-        "brightness": "Luminosità",
-        "calibration": "Calibrazione",
-        "carbon_monoxide": "Monossido di carbonio",
-        "color_hs": "Colore (HS)",
-        "color_temp": "Temperatura colore",
-        "color_temp_startup": "Temperatura colore all'avvio",
-        "color_xy": "Colore (XY)",
-        "comfort_temperature": "Temperatura comfort",
-        "consumer_connected": "Carico connesso",
-        "consumer_overload": "Sovraccarico",
-        "contact": "Contatto",
-        "current": "Corrente",
-        "current_heating_setpoint": "Setpoint corrente riscaldamento",
-        "eco_temperature": "Temperatura Eco",
-        "effect": "Effetto",
-        "empty_exposes_definition": "Svuota definizioni esposte",
-        "energy": "Energia",
-        "force": "Forza",
-        "humidity": "Umidità",
-        "illuminance": "Luminosità",
-        "illuminance_lux": "Lux luminosità",
-        "led_disabled_night": "Led notturno disabilitato",
-        "linkquality": "Qualità connessione",
-        "local_temperature": "Temperatura locale",
-        "local_temperature_calibration": "Calibrazione temperatura locale",
-        "max_temperature": "Temperatura max",
-        "min_temperature": "Temperatura min",
-        "motor_reversal": "Inversione del motore",
-        "moving": "In movimento",
-        "occupancy": "Occupazione",
-        "operation_mode": "Modalità operativa",
-        "options": "Opzioni",
-        "position": "Positione",
-        "power": "Alimentazione",
-        "power_on_behavior": "Comportamento di accensione",
-        "power_outage_memory": "Memoria per interruzione di corrente",
-        "preset": "Preset",
-        "pressure": "Pressione",
-        "sensivity": "Sensibilità",
-        "smoke": "Fumo",
-        "state": "State",
-        "strength": "Forza",
-        "system_mode": "Modalità di sistema",
-        "tamper": "Tamper",
-        "temperature": "Temperatura",
-        "voltage": "Tensione",
-        "water_leak": "Perdita acqua",
-        "week": "Settimana"
+        "empty_exposes_definition": "Svuota definizioni esposte"
     },
     "extensions": {
         "create_new_extension": "Crea nuova estensione",
@@ -186,6 +124,47 @@
         "state": "Stato",
         "temperature": "Temperatura",
         "tamper": "Manomesso",
+        "away_mode": "Modalità fuori casa",
+        "carbon_monoxide": "Monossido di carbonio",
+        "color_hs": "Colore (HS)",
+        "color_temp_startup": "Temperatura colore all'avvio",
+        "consumer_connected": "Carico connesso",
+        "current": "Corrente",
+        "current_heating_setpoint": "Setpoint corrente riscaldamento",
+        "energy": "Energia",
+        "local_temperature": "Temperatura locale",
+        "local_temperature_calibration": "Calibrazione temperatura locale",
+        "moving": "In movimento",
+        "options": "Opzioni",
+        "position": "Positione",
+        "power": "Alimentazione",
+        "smoke": "Fumo",
+        "system_mode": "Modalità di sistema",
+        "voltage": "Tensione",
+        "water_leak": "Perdita acqua",
+        "week": "Settimana",
+        "operation_mode": "Modalità operativa",
+        "effect": "Effetto",
+        "linkquality": "Qualità connessione",
+        "battery": "Batteria",
+        "power_outage_memory": "Memoria per interruzione di corrente",
+        "led_disabled_night": "Led notturno disabilitato",
+        "illuminance_lux": "Lux luminosità",
+        "battery_low": "Batteria bassa",
+        "strength": "Forza",
+        "auto_off": "Spegnimento automatico",
+        "power_on_behavior": "Comportamento di accensione",
+        "max_temperature": "Temperatura max",
+        "min_temperature": "Temperatura min",
+        "comfort_temperature": "Temperatura comfort",
+        "eco_temperature": "Temperatura Eco",
+        "away_preset_days": "Giorni prestabiliti modalità fuori casa",
+        "boost_time": "Tempo di boost",
+        "force": "Forza",
+        "away_preset_temperature": "Preset temperatura modalità fuori casa",
+        "calibration": "Calibrazione",
+        "motor_reversal": "Inversione del motore",
+        "backlight_mode": "Modalità retroilluminazione",
         "power_alarm_active": "Allarme potenza attivo"
     },
     "groups": {
@@ -226,12 +205,10 @@
         "groups": "Gruppi",
         "logs": "Log",
         "map": "Mappa",
-        "ota": "OTA",
         "permit_join": "Permetti join",
         "restart": "Riavvia",
         "settings": "Impostazioni",
-        "toggle_dropdown": "Attiva/disattiva menu a discesa",
-        "touchlink": "Touchlink"
+        "toggle_dropdown": "Attiva/disattiva menu a discesa"
     },
     "ota": {
         "check": "Verifica nuovi aggiornamenti",
@@ -244,7 +221,6 @@
         "about": "Info",
         "advanced": "Avanzate",
         "availability": "Disponibilità",
-        "blocklist": "Blocklist",
         "coordinator_revision": "Revisione Coordinator",
         "coordinator_type": "Tipo Coordinator",
         "donate": "Donazioni",
@@ -255,13 +231,9 @@
         "download_state": "Download backup",
         "experimental": "Sperimentale",
         "external_converters": "Convertitori esterni",
-        "frontend": "Frontend",
         "frontend_version": "Versione frontend",
         "main": "Principale",
-        "mqtt": "MQTT",
         "ota": "Aggiornamenti OTA",
-        "passlist": "Passlist",
-        "raw": "Raw",
         "restart_zigbee2mqtt": "Riavvia Zigbee2MQTT",
         "serial": "Seriale",
         "settings": "Impostazioni",
@@ -269,49 +241,6 @@
         "zigbee2mqtt_version": "Versione Zigbee2MQTT",
         "translate": "Traduci",
         "stats": "Stati"
-    },
-    "settingsSchemaTranslations": {
-        "advanced-title": "Avanzate",
-        "advanced_availability_blacklist__title": "Blacklist disponibilità (obsoleto, utilizza Blocklist)",
-        "advanced_availability_blocklist__description": "Impedisci la verifica della disponibilità dei dispositivi",
-        "advanced_availability_blocklist__title": "Blocklist disponibilità",
-        "advanced_availability_passlist__description": "Abilita il controllo della disponibilità solo per alcuni dispositivi",
-        "advanced_availability_passlist__title": "Passlist disponibilità",
-        "advanced_availability_whitelist__title": "Whitelist disponibilità (obsoleto, usa Passlist)",
-        "advanced_ext_pan_id__description": "Zigbee Extended Pan ID, la modifica richiede il repairing di tutti i dispositivi!",
-        "advanced_ext_pan_id__title": "Ext Pan ID",
-        "advanced_log_output__description": "Posizione di output del registro, lasciare vuoto per fermare la registrazione",
-        "advanced_log_output__title": "Output log",
-        "advanced_log_syslog-title": "Syslog",
-        "blocklist__description": "Blocca i dispositivi dalla rete (tramite ieeeAddr)",
-        "blocklist__title": "Blocklist",
-        "experimental-title": "Sperimentale",
-        "external_converters__description": "È possibile definire convertitori esterni ad es. aggiungi il supporto per un dispositivo fai-da-te",
-        "external_converters__title": "Convertitori esterni",
-        "frontend-title": "Frontend",
-        "mqtt-title": "MQTT",
-        "ota-title": "Aggiornamenti OTA",
-        "passlist__description": "Consenti solo a determinati dispositivi di unirsi alla rete (tramite ieeeAddr). Tieni presente che tutti i dispositivi non presenti nella lista di accesso verranno rimossi dalla rete!",
-        "passlist__title": "Passlist",
-        "root__description": "Consenti solo a determinati dispositivi di unirsi alla rete (tramite ieeeAddr). Tieni presente che tutti i dispositivi non presenti nella lista di accesso verranno rimossi dalla rete!",
-        "root_availability_blacklist__title": "Blacklist disponibilità (obsoleto, utilizza Blocklist)",
-        "root_availability_blocklist__description": "Impedisci la verifica della disponibilità dei dispositivi",
-        "root_availability_blocklist__title": "Blocklist disponibilità",
-        "root_availability_passlist__description": "Abilita il controllo della disponibilità solo per alcuni dispositivi",
-        "root_availability_passlist__title": "Passlist disponibilità",
-        "root_availability_whitelist__title": "Whitelist disponibilità (obsoleto, usa Passlist)",
-        "root_debounce_ignore__description": "Proteggi i valori specifiche proprietà di payload contro l'override con un tempo di antirimbalzo",
-        "root_debounce_ignore__title": "Ignora antirimbalzo",
-        "root_ext_pan_id__description": "Zigbee Extended Pan ID, la modifica richiede il repairing di tutti i dispositivi!",
-        "root_ext_pan_id__title": "Ext Pan ID",
-        "root_filtered_attributes__description": "Consenti di impedire la pubblicazione di determinati attributi",
-        "root_filtered_attributes__title": "Attributi filtrati",
-        "root_filtered_optimistic__description": "Filtra gli attributi dal payload di pubblicazione ottimistica quando si interroga/imposta (Questo non ha effetto se l'ottimistico è impostato su falso).",
-        "root_filtered_optimistic__title": "Attributi ottimistici filtrati",
-        "root_log_output__description": "Posizione di output del registro, lasciare vuoto per fermare la registrazione",
-        "root_log_output__title": "Output log",
-        "root_log_syslog-title": "syslog",
-        "serial-title": "Seriale"
     },
     "touchlink": {
         "detected_devices_message": "Ricerca {{count}} dispositivi touchlink.",
@@ -336,11 +265,9 @@
         "attribute": "Attributi",
         "battery": "Batteria",
         "block_join": "Blocca la riassociazione",
-        "cluster": "Cluster",
         "dc_source": "Alimentazione DC",
         "description": "Descrizione",
         "device_type": "Tipo dispositivo",
-        "endpoint": "Endpoint",
         "firmware_build_date": "Data creazione firmware",
         "firmware_version": "Versione firmware",
         "force_remove": "Rimozione forzata",
@@ -351,9 +278,8 @@
         "interview_failed": "Interrogazione fallita",
         "interviewing": "Interrogazione in corso",
         "last_seen": "Ultima connessione",
-        "lqi": "LQI",
-        "manufacturer": "Produttore",
         "mains_single_phase": "Alimentazione fase singola",
+        "manufacturer": "Produttore",
         "max_rep_interval": "Intervallo max rep",
         "min_rep_change": "cambio min rep",
         "min_rep_interval": "Intervallo min rep",
@@ -397,8 +323,6 @@
     },
     "avaliability": {
         "avaliability": "Disponibilità",
-        "offline": "Offline",
-        "online": "Online",
         "disabled": "Disabilitato"
     }
 }
